--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div class="gallery-grid">
         <div class="card"><img src="C:\Users\raiyx\Downloads\AUTO ACCESSORIES NZ\WEBSITE\images\underglow.JPG" alt="Underglows"></div>
         <div class="card"><img src="C:\Users\raiyx\Downloads\AUTO ACCESSORIES NZ\WEBSITE\images\gauge.jpg" alt="Gauge Setups"></div>
-        <div class="card"><img src="C:\Users\raiyx\Downloads\AUTO ACCESSORIES NZ\WEBSITE\images\wiring kit.jpeg" alt="Custom Wiring Kits"></div>
+        <div class="card"><img src="" alt="Custom Wiring Kits"></div>
         <div class="card"><img src="C:\Users\raiyx\Downloads\AUTO ACCESSORIES NZ\WEBSITE\images\sensor.JPG" alt="Sensor/Adapter Installs"></div>
     </div>
 </div>
